# dynamicEntropy-group

./: .gitignore  README.md
data_tools/: README  pyproject.toml
data_tools/examples/: do_all_fits.sh  generate_random_data.py  log.lammps  scaling.py  scaling_t.py  test_logger.py
data_tools/src/data_tools/: __init__.py  association_constant.py  basic_parser.py  basic_stats.py  fitting.py  format_output_dict.py  gpda.py  histogram.py  kb_integral.py  logger.py  mask_df_by_range.py  plot.py  plotting_utilities.py  plotting_with_matplotlib.py  plotting_with_plotly.py  plotting_wrapper.py  read_files.py  select_columns.py
data_tools/src/data_tools/orca_tools/: analyse_orca.py  calculate_electrons_from_xyz.py  commad_line_parser.py  extract_from_orca_output.py  get_charges.py  get_coordinates.py  get_geopt.py  get_input_commands.py  get_orbital_energies.py  get_tddft.py  get_thermochemistry.py  get_values.py  get_vibrational_modes.py  hierarchical_clustering.py  main.py  template.py  utils.py
gpta/docs/: Makefile  add.tex  align.tex  amoeba.tex  amoeba_full.tex  clusters.tex  configurations.tex  define.tex  delete.tex  dmap1D.tex  dmap2D.tex  dmap3D.tex  extract.tex  fixCell.tex  fixcom.tex  frames.tex  gofr.tex  input.tex  last.tex  manual.tex  mirror.tex  molprop.tex  msd.tex  noclash.tex  output.tex  pbc.tex  (+14 more)
misc_python_code/: fep_analysis.py  read_lammps_output.py
new_openmm_wrapper/: pyproject.toml
openmm_wrapper/: pyproject.toml
openmm_wrapper/_simple_md/: createPDB.py  ffmd.py  ljmd.py  ljmd_osmotic.py
openmm_wrapper/examples/co3_water/: forcefield.xml  md.yaml
openmm_wrapper/examples/co3_water_rigid/: forcefield.xml  md.yaml
openmm_wrapper/examples/mtd/: mtd.yaml
openmm_wrapper/examples/osmotic/: state.vmd
openmm_wrapper/examples/osmotic/slab/: md.yaml  newFF.xml
openmm_wrapper/examples/osmotic/sphere/: md.yaml
openmm_wrapper/examples/test_install/: ffmd.py  forcefield.xml  job_omm.sh  md.yaml  omm8.4_hip6.erg
openmm_wrapper/src/openmm_wrapper/: __init__.py  __main__.py  add_electron_volt_to_unit.py  add_restraints.py  catalytic_reaction.py  catch_explosion.py  change_atoms_properties.py  check_system.py  commands_parser.py  compute_energy.py  compute_energy_from_context.py  create_collective_variables.py  create_simulation.py  create_system.py  csvr_integrator.py  custom_com_remover.py  custom_cosine_angle_force.py  custom_distance_improper_force.py  custom_force_fields.py  custom_intramolecular_forces.py  custom_nonbonded_14_force.py  custom_nonbonded_force.py  custom_reporter.py  dcd_writer.py  dump_restart_files.py  extendedStateDataReporter.py  forward_flux_sampling.py  frame.py  free_energy_perturbation.py  free_energy_perturbation_reporter.py  hills_reporter.py  integrator.py  logger.py  metadynamics.py  minimise.py  molecular_dynamics.py  my_dcd_file.py  my_dcd_reporter.py  my_metadynamics_kernel.py  opls_ff.py  (+8 more)
workflow/: README.md  pyproject.toml
workflow/examples/basic/: example_1.yaml  example_2.yaml  example_3.yaml
workflow/examples/ti/: fcc.cif  ti.yaml
workflow/examples/wco_np/: np.yaml  tersoff_refit_w2c.lmp
workflow/src/workflow/: __init__.py  execute_commands.py  lmpgen.py  run_script.py  ti_analysis.py
(+93 files in other folders)
